--- a/src/PicoStack.Specs/PicoStack.Specs.csproj
+++ b/src/PicoStack.Specs/PicoStack.Specs.csproj
@@ -39,6 +39,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyInjection\RegistrySpecs.cs" />
     <Compile Include="Server\HttpHeaderSpecs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
