--- a/src/PicoStack.Console/PicoStack.Console.csproj
+++ b/src/PicoStack.Console/PicoStack.Console.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegistryConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PicoStack.Core\PicoStack.Core.csproj">
