--- a/src/PicoStack.Core/PicoStack.Core.csproj
+++ b/src/PicoStack.Core/PicoStack.Core.csproj
@@ -38,18 +38,19 @@
   <ItemGroup>
     <Compile Include="DataAccess\Repository.cs" />
     <Compile Include="DependencyInjection\Registry.cs" />
-    <Compile Include="HttpHeader.cs" />
-    <Compile Include="HttpRequest.cs" />
-    <Compile Include="HttpResponse.cs" />
-    <Compile Include="HttpStatusCode.cs" />
-    <Compile Include="IRequestHandler.cs" />
+    <Compile Include="Web\HttpHeader.cs" />
+    <Compile Include="Web\HttpRequest.cs" />
+    <Compile Include="Web\HttpResponse.cs" />
+    <Compile Include="Web\HttpStatusCode.cs" />
+    <Compile Include="Web\IRequestHandler.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Rest\RestApiController.cs" />
     <Compile Include="Rest\RestApiRequestHandler.cs" />
     <Compile Include="Serialization\JsonSerializer.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="Web\Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Web\StaticFileRequestHandler.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
